// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle Component should render change toggle from OFF to ON and vice versa when clicking on it  1`] = `
<label
  className="relative inline-block rounded-full focus:outline-none focus:border-2 group w-10 h-6  focus:border-grey"
>
  <input
    className="hidden"
    disabled={false}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="absolute cursor-pointer top-0 left-0 right-0 bottom-0 w-full h-full block transition duration-300 rounded-full bg-grey-shd4 group-hover:bg-grey-shd3 group-focus:border group-focus:border-solid group-focus:border-primary-shd1"
  >
    <span
      className="absolute left-1 rounded-full transition duration-300 w-4 h-4 bottom-1 bg-white"
    />
  </span>
</label>
`;

exports[`Toggle Component should render disable toggle when passing disabled  1`] = `
<label
  className="relative inline-block rounded-full focus:outline-none focus:border-2 group w-10 h-6  opacity-30 focus:border-grey"
>
  <input
    className="hidden"
    disabled={true}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="absolute cursor-pointer top-0 left-0 right-0 bottom-0 w-full h-full block transition duration-300 rounded-full bg-grey-shd4 group-hover:bg-grey-shd3 group-focus:border group-focus:border-solid group-focus:border-primary-shd1"
  >
    <span
      className="absolute left-1 rounded-full transition duration-300 w-4 h-4 bottom-1 bg-white"
    />
  </span>
</label>
`;

exports[`Toggle Component should render large OFF toggle when passing size=lg   1`] = `
<label
  className="relative inline-block rounded-full focus:outline-none focus:border-2 group w-7 h-4  focus:border-grey"
>
  <input
    className="hidden"
    disabled={false}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="absolute cursor-pointer top-0 left-0 right-0 bottom-0 w-full h-full block transition duration-300 rounded-full bg-grey-shd4 group-hover:bg-grey-shd3 group-focus:border group-focus:border-solid group-focus:border-primary-shd1"
  >
    <span
      className="absolute left-1 rounded-full transition duration-300 w-3 h-3 bottom-0.5 bg-white"
    />
  </span>
</label>
`;

exports[`Toggle Component should render small OFF toggle when passing size=sm   1`] = `
<label
  className="relative inline-block rounded-full focus:outline-none focus:border-2 group w-7 h-4  focus:border-grey"
>
  <input
    className="hidden"
    disabled={false}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="absolute cursor-pointer top-0 left-0 right-0 bottom-0 w-full h-full block transition duration-300 rounded-full bg-grey-shd4 group-hover:bg-grey-shd3 group-focus:border group-focus:border-solid group-focus:border-primary-shd1"
  >
    <span
      className="absolute left-1 rounded-full transition duration-300 w-3 h-3 bottom-0.5 bg-white"
    />
  </span>
</label>
`;

exports[`Toggle Component should render with large OFF toggle as default without any props  1`] = `
<label
  className="relative inline-block rounded-full focus:outline-none focus:border-2 group w-10 h-6  focus:border-grey"
>
  <input
    className="hidden"
    disabled={false}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="absolute cursor-pointer top-0 left-0 right-0 bottom-0 w-full h-full block transition duration-300 rounded-full bg-grey-shd4 group-hover:bg-grey-shd3 group-focus:border group-focus:border-solid group-focus:border-primary-shd1"
  >
    <span
      className="absolute left-1 rounded-full transition duration-300 w-4 h-4 bottom-1 bg-white"
    />
  </span>
</label>
`;
